'removed overflow:hidden because there are some display issues on some pages. min-width: 0 is enough to trigger IE7 hasLayout to avoid collapsing divs'

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -71,7 +71,7 @@ h6.main {
 
 .clearfix {
   min-width: 0;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .clearfix:after {
